--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
 
     <main>
-        <section>
+        <section class="boas_vindas">
             <h1>
                 Bem-vindo(a) ao <br>
                 <strong>Frontend Quiz!</strong>
