parte final das alternativas finalizadas

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -54,7 +54,22 @@
                     Hyper Text Marketing Language
                 </div>
                 </label>
+
+                <label for="alternativa_c">
+                    <input type="radio" id="alternativa_c">
+                    <div>
+                        <span>C</span>
+                        Hyper Text Markup Language
+                    </div>
+                </label>
+
+                <label for="alternativa_d">
+                    <input type="radio" id="alternativa_d">
+                    Hyper Text Markup Leveler
+                </label>
             </form>
+
+            <button>Enviar</button>
         </section>
     </main>
 </body>
