--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -44,7 +44,7 @@
         <section class="alternativas">
             <form action="">
                <label for="alternativa_a">
-                <input type="radio" id="alternativa_a">
+                <input type="radio" id="alternativa_a" name="alternativa">
 
                 <div>
                     <span>A</span>
@@ -53,7 +53,7 @@
              </label>
 
             <label for="alternativa_b">
-                <input type="radio" id="alternativa_b">
+                <input type="radio" id="alternativa_b" name="alternativa">
                 <div>
                     <span>B</span>
                     Hyper Text Marketing Language
@@ -61,7 +61,7 @@
                 </label>
 
                 <label for="alternativa_c">
-                    <input type="radio" id="alternativa_c">
+                    <input type="radio" id="alternativa_c" name="alternativa">
                     <div>
                         <span>C</span>
                         Hyper Text Markup Language
@@ -69,8 +69,11 @@
                 </label>
 
                 <label for="alternativa_d">
-                    <input type="radio" id="alternativa_d">
+                    <input type="radio" id="alternativa_d" name="alternativa">
+                    <div>
+                    <span>D</span>
                     Hyper Text Markup Leveler
+                </div>
                 </label>
             </form>
 
