primeiros ajustes do tema no javascript

--- a/pages/quiz/quiz.html
+++ b/pages/quiz/quiz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="quiz.css">
     <title>Quiz App</title>
 </head>
-<body class="">
+<body>
     <header>
         <div class="assunto">
             <div class="assunto_icone">
