--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
 
             <button class="botao_javascript">
                 <div>
-                    <img src="./assets/images/icon-js.svg" alt="Icone do Javascript">
+                    <img src="./assets/images/icon-javascript.svg" alt="Icone do Javascript">
                 </div>
                 Javascript
             </button>
 
             <button class="botao_acessibilidade">
                 <div>
-                    <img src="./assets/images/icon-accessibility.svg" alt="Icone da acessibilidade">
+                    <img src="./assets/images/icon-acessibilidade.svg" alt="Icone da acessibilidade">
                 </div>
                 Acessibilidade
             </button>
